--- a/papaja_slides.qmd
+++ b/papaja_slides.qmd
@@ -1,8 +1,13 @@
 ---
 title: "APA-style manuscripts with RMarkdown and papaja"
+author: "Dr James Bartlett"
 format: revealjs
 editor: visual
 ---
+
+```{r, echo=FALSE}
+library(pwr)
+```
 
 ## Quarto
 
@@ -22,3 +27,123 @@ When you click the **Render** button a presentation will be generated that inclu
 ```{r}
 1 + 1
 ```
+
+## What problems are we trying to solve?
+
+### Case study of my mistakes
+
+## YAML options
+
+### Adding a .bib file
+
+I use Zotero as a reference manager: <https://www.zotero.org/>
+
+- Create a collection 
+
+- Export collection
+
+- Format BibTeX and OK
+
+- Save as in your document directory 
+
+````
+---
+bibliography      : ["references.bib", "r-references.bib"]
+---
+````
+
+## YAML options
+
+### Changing the reference style
+
+- Once you have a .bib file, you can easily change the style by selecting a different citation style language (CSL)
+
+- Over 10,000 on the Zotero style repository, just save as and add .csl to the file: <https://www.zotero.org/styles>
+
+E.g., APA 7th edition
+
+````
+---
+csl               : apa7.csl
+---
+````
+
+## YAML options
+
+### Changing the reference style
+
+- Once you have a .bib file, you can easily change the style by selecting a different citation style language (CSL)
+
+- Over 10,000 on the Zotero style repository, just save as and add .csl to the file: <https://www.zotero.org/styles>
+
+E.g., Vancouver 
+
+````
+---
+csl               : vancouver.csl
+---
+````
+
+## Citations and references
+
+### citr
+:::: {.columns}
+
+::: {.column width="60%"}
+
+Alongside papaja, Aust created a great helper package called citr which makes it easy to browse a .bib file and insert citations.
+
+```{r, eval=FALSE, echo = TRUE}
+# Not currently on CRAN
+devtools::install_github("crsh/citr")
+```
+
+:::
+
+::: {.column width="40%"}
+![](Screenshots/citr.png)
+:::
+
+::::
+
+## In-line code
+
+### Power analysis
+
+```{r, echo=TRUE}
+effect_size <- 0.5
+alpha <- .05
+power <- .90
+
+power_analysis <- pwr.t.test(d = effect_size, 
+                             sig.level = alpha,
+                             power = power, 
+                             type = "two.sample")
+
+sample_size <- ceiling(power_analysis$n)
+```
+
+A power analysis showed we would need `'r sample_size'` participants per group to detect an effect size of d = `'r effect_size'` with `'r power*100'`% power (alpha = `'r alpha'`).
+
+## In-line code
+
+### Power analysis
+
+```{r, echo=TRUE}
+effect_size <- 0.5
+alpha <- .05
+power <- .90
+
+power_analysis <- pwr.t.test(d = effect_size, 
+                             sig.level = alpha,
+                             power = power, 
+                             type = "two.sample")
+
+sample_size <- ceiling(power_analysis$n)
+```
+
+A power analysis showed we would need `r sample_size` participants per group to detect an effect size of d = `r effect_size` with `r power*100`% power (alpha = `r alpha`).
+
+## Tables and figures
+
+## Summary
