--- a/Mock_example/references.bib
+++ b/Mock_example/references.bib
@@ -17,22 +17,45 @@
 \_eprint: https://www.tandfonline.com/doi/pdf/10.1080/26939169.2021.1967229},
 	keywords = {Error-free learning, Error-full learning, SAS® software, Statistical programming},
 	pages = {1--13},
-	file = {Full Text PDF:/Users/jamesbartlett/Zotero/storage/EFM8BP9N/Hoffman and Elmi - 2021 - Do Students Learn More from Erroneous Code Explor.pdf:application/pdf;Snapshot:/Users/jamesbartlett/Zotero/storage/584VJM6I/26939169.2021.html:text/html},
+	file = {Full Text PDF:C\:\\Users\\jamesb\\Zotero\\storage\\EFM8BP9N\\Hoffman and Elmi - 2021 - Do Students Learn More from Erroneous Code Explor.pdf:application/pdf;Snapshot:C\:\\Users\\jamesb\\Zotero\\storage\\584VJM6I\\26939169.2021.html:text/html},
 }
 
-@article{baumer_r_2014,
-	title = {R {Markdown}: {Integrating} {A} {Reproducible} {Analysis} {Tool} into {Introductory} {Statistics}},
-	shorttitle = {R {Markdown}},
-	url = {http://arxiv.org/abs/1402.1894},
-	abstract = {Nolan and Temple Lang argue that "the ability to express statistical computations is an essential skill." A key related capacity is the ability to conduct and present data analysis in a way that another person can understand and replicate. The copy-and-paste workflow that is an artifact of antiquated user-interface design makes reproducibility of statistical analysis more difficult, especially as data become increasingly complex and statistical methods become increasingly sophisticated. R Markdown is a new technology that makes creating fully-reproducible statistical analysis simple and painless. It provides a solution suitable not only for cutting edge research, but also for use in an introductory statistics course. We present evidence that R Markdown can be used effectively in introductory statistics courses, and discuss its role in the rapidly-changing world of statistical computation.},
-	urldate = {2019-07-09},
-	journal = {arXiv:1402.1894 [stat]},
-	author = {Baumer, Ben and Cetinkaya-Rundel, Mine and Bray, Andrew and Loi, Linda and Horton, Nicholas J.},
-	month = feb,
-	year = {2014},
-	note = {arXiv: 1402.1894},
-	keywords = {62-01, Statistics - Other Statistics},
-	file = {arXiv\:1402.1894 PDF:/Users/jamesbartlett/Zotero/storage/2CKCRKII/Baumer et al. - 2014 - R Markdown Integrating A Reproducible Analysis To.pdf:application/pdf;arXiv.org Snapshot:/Users/jamesbartlett/Zotero/storage/NGLUAP5Q/1402.html:text/html},
+@article{bebermeier_creating_2019,
+	title = {Creating {Statistics} {Exercises} on the {Basis} of {Research} {Articles}},
+	volume = {46},
+	issn = {0098-6283, 1532-8023},
+	url = {http://journals.sagepub.com/doi/10.1177/0098628319853938},
+	doi = {10.1177/0098628319853938},
+	abstract = {We describe how students can be encouraged to actively review course contents on inferential statistics by creating applicationoriented exercises and sample solutions on the basis of concrete and realistic research articles and their data. For evaluation purposes, we use students’ reactions to the activity and investigate its effects on the final statistics exam. Students’ ratings of the quality of the exercises, necessary knowledge, and the evaluation of the activity were very positive, and participating students achieved better grades in the final exam than nonparticipants, whereas the groups did not differ regarding their initial skills or motivational characteristics. We conclude by discussing implications for lecturers teaching statistics.},
+	language = {en},
+	number = {3},
+	urldate = {2019-12-14},
+	journal = {Teaching of Psychology},
+	author = {Bebermeier, Sarah and Hagemann, Anne},
+	month = jul,
+	year = {2019},
+	pages = {240--245},
+	file = {0098628319853938.pdf:C\:\\Users\\jamesb\\Zotero\\storage\\F5GDN23F\\0098628319853938.pdf:application/pdf},
+}
+
+@article{simonsohn_small_2015,
+	title = {Small {Telescopes}: {Detectability} and the {Evaluation} of {Replication} {Results}},
+	volume = {26},
+	issn = {0956-7976},
+	shorttitle = {Small {Telescopes}},
+	url = {https://doi.org/10.1177/0956797614567341},
+	doi = {10.1177/0956797614567341},
+	abstract = {This article introduces a new approach for evaluating replication results. It combines effect-size estimation with hypothesis testing, assessing the extent to which the replication results are consistent with an effect size big enough to have been detectable in the original study. The approach is demonstrated by examining replications of three well-known findings. Its benefits include the following: (a) differentiating ?unsuccessful? replication attempts (i.e., studies yielding p {\textgreater} .05) that are too noisy from those that actively indicate the effect is undetectably different from zero, (b) ?protecting? true findings from underpowered replications, and (c) arriving at intuitively compelling inferences in general and for the revisited replications in particular.},
+	language = {en},
+	number = {5},
+	urldate = {2022-09-28},
+	journal = {Psychological Science},
+	author = {Simonsohn, Uri},
+	month = may,
+	year = {2015},
+	note = {Publisher: SAGE Publications Inc},
+	pages = {559--569},
+	file = {SAGE PDF Full Text:C\:\\Users\\jamesb\\Zotero\\storage\\EVXXVZK3\\Simonsohn - 2015 - Small Telescopes Detectability and the Evaluation.pdf:application/pdf},
 }
 
 @article{targ_meta-research_group_statistics_2022,
@@ -50,7 +73,7 @@
 	month = sep,
 	year = {2022},
 	pages = {38037},
-	file = {Full Text PDF:/Users/jamesbartlett/Zotero/storage/YIAPJPCR/TARG Meta-Research Group - 2022 - Statistics Education in Undergraduate Psychology .pdf:application/pdf;Snapshot:/Users/jamesbartlett/Zotero/storage/BD5VV3DY/Statistics-Education-in-Undergraduate-Psychology-A.html:text/html},
+	file = {Full Text PDF:C\:\\Users\\jamesb\\Zotero\\storage\\YIAPJPCR\\TARG Meta-Research Group - 2022 - Statistics Education in Undergraduate Psychology .pdf:application/pdf;Snapshot:C\:\\Users\\jamesb\\Zotero\\storage\\BD5VV3DY\\Statistics-Education-in-Undergraduate-Psychology-A.html:text/html},
 }
 
 @misc{mcaleer_embedding_2022,
@@ -65,6 +88,6 @@
 	author = {McAleer, Phil and Stack, Niamh and Woods, Heather and DeBruine, Lisa and Paterson, Helena and Nordmann, Emily and Kuepper-Tetzel, Carolina E. and Barr, Dale J.},
 	month = nov,
 	year = {2022},
-	keywords = {Meta-science, open science, pedagogy, Quantitative Methods, reproducibility, research methods, Social and Behavioral Sciences, Statistical Methods, statistics},
-	file = {Full Text PDF:/Users/jamesbartlett/Zotero/storage/A7WL8Y96/McAleer et al. - 2022 - Embedding Data Skills in Research Methods Educatio.pdf:application/pdf},
+	keywords = {open science, Social and Behavioral Sciences, statistics, research methods, pedagogy, Meta-science, reproducibility, Quantitative Methods, Statistical Methods},
+	file = {Full Text PDF:C\:\\Users\\jamesb\\Zotero\\storage\\A7WL8Y96\\McAleer et al. - 2022 - Embedding Data Skills in Research Methods Educatio.pdf:application/pdf},
 }
