--- a/Mock_example/Erroneous_code_manuscript.Rmd
+++ b/Mock_example/Erroneous_code_manuscript.Rmd
@@ -29,7 +29,7 @@ wordcount         : "1200"
 bibliography      : ["references.bib", "r-references.bib"]
 csl               : apa7.csl
 
-floatsintext      : no # 
+floatsintext      : yes # 
 linenumbers       : yes # Add line numbers? 
 draft             : no # Add draft watermark on every page? 
 mask              : no # Hide author details for blind submission? 
@@ -83,15 +83,29 @@ sample_size <- ceiling(
   )
 ```
 
-Before collecting data, we performed an *a priori* power analysis to calculate how many participants we would need. @hoffman_students_2021 did not report any performance data, so we used @bebermeier_creating_2019 to set our smallest effect size of interest. They investigated the effect of creating statistics exercises based on research article. The researchers found students performed better on a class assignment when they completed these exercises than when students did not complete the exercises (*d* = 0.55). The authors did not comment on the effect size, so we chose a more conservative estimate based on the small telescopes approach [@simonsohn_small_2015] for the effect size the original study had 33% power to detect. Using an effect size of d = `r small_telescopes`, we aimed to recruit `r sample_size` participants per group for an independent samples t-test (\alpha = `r alpha`, power = `r power`). 
+Before collecting data, we performed an *a priori* power analysis to calculate how many participants we would need. @hoffman_students_2021 did not report any performance data, so we used @bebermeier_creating_2019 to set our smallest effect size of interest. They investigated the effect of creating statistics exercises based on research article. The researchers found students performed better on a class assignment when they completed these exercises than when students did not complete the exercises (*d* = 0.55). The authors did not comment on the effect size, so we chose a more conservative estimate based on the small telescopes approach [@simonsohn_small_2015] for the effect size the original study had 33% power to detect. Using an effect size of d = `r small_telescopes`, we aimed to recruit `r sample_size` participants per group for an independent samples t-test ($\alpha$ = `r alpha`, power = `r power`). 
 
-We finished with two groups of 145 and 130 participants, slightly fewer than our initial target. 
+We finished with two groups of 145 and 130 participants (N = 275), slightly fewer than our initial target. 
 
 ## Material
 
+In the error-free lecture, students heard a one hour presentation on data wrangling, showing how to use Tidyverse functions like mutate, filter, and select. 
+
+In the error-full lecture, students heard a one hour presentation on data wrangling, the same as in the error-free group. However, in this group we also guided students through an error interpretation session to demonstrate common errors when using these data wrangling functions. 
+
+Both groups of students completed the same data skills assignment on data wrangling where students had to write code to solve problems and debug errors. Scores could range from 0-100. 
+
 ## Procedure
 
-## Data analysis
+We offered participants an additional bonus lecture outside their normal course curriculum. Students could register interest on their course page and provide informed consent. On sign up, students were randomly allocated to attend the error-free lecture or error-full lecture. In the hour immediately following the lecture, students completed the data skills assignment and were debriefed. We provided students who did not receive the error-full lecture a link to the lecture recording to ensure they received the debugging guidance. We demonstrate the procedure as a diagram in Figure \@ref(fig:procedure-diagram).
+
+(ref:procedure-diagram-caption) Procedure diagram showing how students were randomly allocated to an error-free or error-full version of a lecture before completing a data skills assignment. 
+
+```{r procedure-diagram, fig.cap="(ref:procedure-diagram-caption)", out.width="100%"}
+knitr::include_graphics("Figures/procedure_diagram.png")
+```
+
+## Design and data analysis
 
 We used `r cite_r("r-references.bib")` for all our analyses.
 
