--- a/Mock_example/Erroneous_code_manuscript.tex
+++ b/Mock_example/Erroneous_code_manuscript.tex
@@ -225,7 +225,7 @@ In the error-free lecture, students heard a one hour presentation on data wrangl
 
 In the error-full lecture, students heard a one hour presentation on data wrangling, the same as in the error-free group. However, in this group we also guided students through an error interpretation session to demonstrate common errors when using these data wrangling functions.
 
-Both groups of students completed the same data skills assignment on data wrangling where students had to write code to solve problems and debug errors. Scores could range from 0-100.
+Both groups of students completed the same data skills assignment on data wrangling where students had to write code to solve problems and debug errors. Scores could range from 0-100\%.
 
 \hypertarget{procedure}{%
 \subsection{Procedure}\label{procedure}}
@@ -241,13 +241,20 @@ We offered participants an additional bonus lecture outside their normal course 
 \hypertarget{design-and-data-analysis}{%
 \subsection{Design and data analysis}\label{design-and-data-analysis}}
 
-We used R (Version 4.1.3; R Core Team, 2022) and the R-packages \emph{dplyr} (Version 1.0.10; Wickham, François, et al., 2022), \emph{forcats} (Version 0.5.1; Wickham, 2021), \emph{ggplot2} (Version 3.3.6; Wickham, 2016), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{purrr} (Version 0.3.4; Henry \& Wickham, 2020), \emph{pwr} (Version 1.3.0; Champely, 2020), \emph{readr} (Version 2.1.2; Wickham, Hester, et al., 2022), \emph{shiny} (Version 1.7.3; Chang et al., 2022), \emph{stringr} (Version 1.4.1; Wickham, 2022), \emph{tibble} (Version 3.1.8; Müller \& Wickham, 2022), \emph{tidyr} (Version 1.2.0; Wickham \& Girlich, 2022), \emph{tidyverse} (Version 1.3.2; Wickham et al., 2019), and \emph{tinylabels} (Version 0.2.3; Barth, 2022) for all our analyses.
+We had one between-subjects IV with two levels. Participants were randomly allocated to attend the error-free (level 1) or error-full (level 2) version of the lecture. We had one dependent variable of their score on the data skills assignment which could range between 0-100\%.
+
+Data met parametric assumptions and we used a Welch t-test to compare the two groups on their data skills score. We used a two-tailed test as we expected the error-full lecture to produce higher scores, but we were open to the possibility that the error-free lecture could produce higher scores.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
+
+\hypertarget{disclosures}{%
+\section{Disclosures}\label{disclosures}}
+
+We used R (Version 4.1.3; R Core Team, 2022) and the R-packages \emph{dplyr} (Version 1.0.10; Wickham, François, et al., 2022), \emph{forcats} (Version 0.5.1; Wickham, 2021), \emph{ggplot2} (Version 3.3.6; Wickham, 2016), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{purrr} (Version 0.3.4; Henry \& Wickham, 2020), \emph{pwr} (Version 1.3.0; Champely, 2020), \emph{readr} (Version 2.1.2; Wickham, Hester, et al., 2022), \emph{shiny} (Version 1.7.3; Chang et al., 2022), \emph{stringr} (Version 1.4.1; Wickham, 2022), \emph{tibble} (Version 3.1.8; Müller \& Wickham, 2022), \emph{tidyr} (Version 1.2.0; Wickham \& Girlich, 2022), \emph{tidyverse} (Version 1.3.2; Wickham et al., 2019), and \emph{tinylabels} (Version 0.2.3; Barth, 2022) for all our analyses.
 
 \newpage
 
